--- a/MVCMusicStore/Web.config
+++ b/MVCMusicStore/Web.config
@@ -36,4 +36,9 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
+  <connectionStrings>
+    <add name="MusicStoreEntities"
+          connectionString="Data Source=|DataDirectory|MvcMusicStore.sdf;"
+           providerName="System.Data.SqlServerCe.4.0"/>
+  </connectionStrings>
 </configuration>
