Update: Testing from other environment

--- a/MVCMusicStore/Web.config
+++ b/MVCMusicStore/Web.config
@@ -4,6 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -22,7 +25,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
-        <add namespace="System.Web.Optimization" /> 
+        <add namespace="System.Web.Optimization" />
       </namespaces>
     </pages>
   </system.web>
@@ -38,9 +41,7 @@
     </handlers>
   </system.webServer>
   <connectionStrings>
-    <add name="MusicStoreEntities" connectionString="Data Source=|DataDirectory|MvcMusicStore.sdf;"
-      providerName="System.Data.SqlServerCe.4.0" />
-    <add name="MVCMusicStoreContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=MVCMusicStoreContext-20130828000543; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MVCMusicStoreContext-20130828000543.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="MusicStoreEntities" connectionString="Data Source=|DataDirectory|MvcMusicStore.sdf;" providerName="System.Data.SqlServerCe.4.0" />
+    <add name="MVCMusicStoreContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=MVCMusicStoreContext-20130828000543; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MVCMusicStoreContext-20130828000543.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
