Using Data Annotations for Model Validation

--- a/MVCMusicStore/Web.config
+++ b/MVCMusicStore/Web.config
@@ -42,6 +42,6 @@
   </system.webServer>
   <connectionStrings>
     <add name="MusicStoreEntities" connectionString="Data Source=|DataDirectory|MvcMusicStore.sdf;" providerName="System.Data.SqlServerCe.4.0" />
-    <add name="MVCMusicStoreContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=MVCMusicStoreContext-20130828000543; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MVCMusicStoreContext-20130828000543.mdf" providerName="System.Data.SqlClient" />
+    <add name="MVCMusicStoreContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=MVCMusicStoreContext; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MVCMusicStoreContext.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
